generic assimploader wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(Bullet CONFIG)
 find_package(stb CONFIG QUIET)
+find_package(assimp CONFIG)
 
 add_library(glfw::glfw INTERFACE IMPORTED)
 target_link_libraries(glfw::glfw INTERFACE glfw)
