--- a/examples/loaders/CMakeLists.txt
+++ b/examples/loaders/CMakeLists.txt
@@ -7,3 +7,8 @@ target_link_libraries(obj_loader PUBLIC threepp)
 
 add_executable(obj_mtl_loader obj_mtl_loader.cpp)
 target_link_libraries(obj_mtl_loader PUBLIC threepp)
+
+if (assimp_FOUND)
+    add_executable(assimp_loader assimp_loader.cpp)
+    target_link_libraries(assimp_loader threepp)
+endif()
