--- a/examples/loaders/CMakeLists.txt
+++ b/examples/loaders/CMakeLists.txt
@@ -9,6 +9,9 @@ add_executable(obj_mtl_loader obj_mtl_loader.cpp)
 target_link_libraries(obj_mtl_loader PUBLIC threepp)
 
 if (assimp_FOUND)
-    add_executable(assimp_loader assimp_loader.cpp)
-    target_link_libraries(assimp_loader threepp)
+    add_executable(assimp_loader_obj assimp_loader_obj.cpp)
+    target_link_libraries(assimp_loader_obj threepp)
+
+    add_executable(assimp_loader_glb assimp_loader_glb.cpp)
+    target_link_libraries(assimp_loader_glb threepp)
 endif()
