--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,13 @@ if (THREEPP_BUILD_EXAMPLES)
 
     find_package(Bullet CONFIG)
 
+    message(${BULLET_INCLUDE_DIRS})
+
     if (BULLET_FOUND AND NOT TARGET Bullet::Bullet)
         add_library(Bullet::Bullet INTERFACE IMPORTED)
+        if("${BULLET_INCLUDE_DIRS}" MATCHES ".*/bullet$")
+            target_include_directories(Bullet::Bullet INTERFACE "${BULLET_INCLUDE_DIRS}/..")
+        endif()
         target_link_libraries(Bullet::Bullet INTERFACE LinearMath Bullet3Common BulletCollision BulletDynamics)
     endif ()
 
