--- a/examples/materials/CMakeLists.txt
+++ b/examples/materials/CMakeLists.txt
@@ -2,4 +2,6 @@
 add_executable(meshphong meshphong.cpp)
 target_link_libraries(meshphong PUBLIC threepp)
 
+add_executable(meshlambert meshlambert.cpp)
+target_link_libraries(meshlambert PUBLIC threepp)
 
