--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,23 +16,9 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-# Prepare for export and installation.
-set(THREEPP_HEADER_INSTALL_DIR "include")
-if (WIN32)
-    set(THREEPP_CMAKE_INSTALL_DIR "cmake")
-else ()
-    set(THREEPP_CMAKE_INSTALL_DIR "share/${PROJECT_NAME}/cmake")
-endif ()
-set(THREEPP_INSTALL_DESTINATIONS
-        ARCHIVE DESTINATION "lib"
-        LIBRARY DESTINATION "lib"
-        RUNTIME DESTINATION "bin"
-        INCLUDES DESTINATION "${THREEPP_HEADER_INSTALL_DIR}")
-set(THREEPP_EXPORT_TARGET "${PROJECT_NAME}-targets")
+# ==============================================================================
+# Dependencies
+# ==============================================================================
 
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
@@ -97,29 +83,28 @@ file(COPY "${CMAKE_SOURCE_DIR}/data" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin
 # Exports and remaining installation
 # ==============================================================================
 
-install(
-        EXPORT "${THREEPP_EXPORT_TARGET}"
-        DESTINATION "${THREEPP_CMAKE_INSTALL_DIR}"
-        NAMESPACE "${PROJECT_NAME}::"
-)
 
 include(CMakePackageConfigHelpers)
+include(GNUInstallDirs)
 
-# Generate and install package-config file.
-set(configFile "${CMAKE_BINARY_DIR}/${PROJECT_NAME}-config.cmake")
-set(targetsFile "${THREEPP_CMAKE_INSTALL_DIR}/${THREEPP_EXPORT_TARGET}.cmake")
-configure_package_config_file(
-        "${CMAKE_SOURCE_DIR}/cmake/project-config.cmake.in"
-        "${configFile}"
-        INSTALL_DESTINATION "${THREEPP_CMAKE_INSTALL_DIR}"
-        PATH_VARS targetsFile
-)
-install(FILES "${configFile}" DESTINATION "${THREEPP_CMAKE_INSTALL_DIR}")
 
-# Generate and install package-version file
-set(versionFile "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake")
+configure_package_config_file(cmake/config.cmake.in
+        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake
+        INSTALL_DESTINATION ${CMAKE_INSTALL_DATADIR}/threepp
+        NO_SET_AND_CHECK_MACRO)
 write_basic_package_version_file(
-        "${versionFile}"
-        VERSION "${PROJECT_VERSION}"
-        COMPATIBILITY "SameMajorVersion")
-install(FILES "${versionFile}" DESTINATION "${THREEPP_CMAKE_INSTALL_DIR}")
+        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config-version.cmake
+        VERSION ${CMAKE_PROJECT_VERSION}
+        COMPATIBILITY SameMajorVersion)
+install(
+        FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config-version.cmake
+        DESTINATION
+        ${CMAKE_INSTALL_DATADIR}/threepp)
+
+install(TARGETS threepp EXPORT threepp-targets)
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(EXPORT threepp-targets
+        NAMESPACE threepp::
+        DESTINATION ${CMAKE_INSTALL_DATADIR}/threepp)
