--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -1,9 +1,9 @@
 @PACKAGE_INIT@
 
-include(${CMAKE_CURRENT_LIST_DIR}/threepp-targets.cmake)
+include(CMakeFindDependencyMacro)
 
-find_package(glfw3 CONFIG REQUIRED)
-find_package(glad CONFIG REQUIRED)
+find_dependency(glfw3 CONFIG)
+find_dependency(glad CONFIG)
 find_package(stb CONFIG QUIET)
 find_package(assimp CONFIG)
 
@@ -18,4 +18,5 @@ endif ()
 
 target_include_directories(stb::stb INTERFACE ${STB_INCLUDE_DIRS})
 
+include(${CMAKE_CURRENT_LIST_DIR}/threepp-targets.cmake)
 check_required_components(threepp)
