--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -1,3 +1,6 @@
 
-add_executable(hello_bullet hello_bullet.cpp BulletEngine.cpp)
-target_link_libraries(hello_bullet PUBLIC threepp PRIVATE Bullet::Bullet)
+add_library(bullet_integration BulletEngine.cpp)
+target_link_libraries(bullet_integration PUBLIC threepp Bullet::Bullet)
+
+add_executable(hello_bullet hello_bullet.cpp)
+target_link_libraries(hello_bullet PRIVATE bullet_integration)
