--- a/examples/projects/kine/CMakeLists.txt
+++ b/examples/projects/kine/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(kine INTERFACE
         "joints/PrismaticJoint.hpp"
         "ik/IKSolver.hpp"
         "ik/DLSSolver.hpp"
+        "ik/CCDSolver.hpp"
         )
 target_include_directories(kine INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(kine INTERFACE threepp)
