--- a/examples/projects/CMakeLists.txt
+++ b/examples/projects/CMakeLists.txt
@@ -1,9 +1,10 @@
 
+add_subdirectory(snake)
+
 if (THREEPP_BUILD_EXAMPLES_WITH_KINE)
     add_subdirectory(kine)
     add_subdirectory(Crane3R)
 endif()
-
 
 if (assimp_FOUND)
     add_subdirectory(Youbot)
