--- a/examples/projects/kine/CMakeLists.txt
+++ b/examples/projects/kine/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(kine INTERFACE
+set(kine_sources
         "Kine.hpp"
         "KineComponent.hpp"
         "KineLink.hpp"
@@ -11,5 +11,17 @@ add_library(kine INTERFACE
         "ik/DLSSolver.hpp"
         "ik/CCDSolver.hpp"
         )
+if (Eigen_FOUND)
+    list(APPEND kine_sources
+            "ik/IKSolver.hpp"
+            )
+endif()
+
+
+add_library(kine INTERFACE ${kine_sources})
 target_include_directories(kine INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(kine INTERFACE threepp Eigen3::Eigen)
+target_link_libraries(kine INTERFACE threepp)
+
+if (Eigen_FOUND)
+    target_link_libraries(kine INTERFACE Eigen3::Eigen)
+endif()
