--- a/examples/projects/Youbot/CMakeLists.txt
+++ b/examples/projects/Youbot/CMakeLists.txt
@@ -2,12 +2,7 @@
 add_executable(Youbot youbot.cpp)
 target_link_libraries(Youbot PRIVATE threepp)
 
-if (THREEPP_BUILD_EXAMPLES_WITH_KINE)
+if (imgui_FOUND)
     add_executable(Youbot_kine youbot_kine.cpp)
     target_link_libraries(Youbot_kine PRIVATE threepp kine imgui::imgui)
-
-    if (Eigen_FOUND)
-        target_compile_definitions(Youbot_kine PRIVATE "HAS_EIGEN")
-    endif()
 endif()
-
