--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -163,7 +163,7 @@ jobs:
 
       - name: Configure and build
         run: |
-          cmake . -B build -DCMAKE_TOOLCHAIN_FILE="${env:VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake" -DVCPKG_MANIFEST_FEATURES="imgui;bullet;assimp;eigen" -DCMAKE_BUILD_TYPE="Release"
+          cmake . -B build -DCMAKE_TOOLCHAIN_FILE="/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake" -DVCPKG_MANIFEST_FEATURES="imgui;bullet;assimp;eigen" -DCMAKE_BUILD_TYPE="Release"
           cmake --build build
 
       - name: Test
