--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -4,3 +4,8 @@ target_link_libraries(bullet_integration PUBLIC threepp Bullet::Bullet)
 
 add_executable(hello_bullet hello_bullet.cpp)
 target_link_libraries(hello_bullet PRIVATE bullet_integration)
+
+if (imgui_FOUND)
+    add_executable(pid_control pid_control.cpp)
+    target_link_libraries(pid_control PRIVATE bullet_integration imgui::imgui)
+endif ()
