--- a/tests/threepp_vcpkg_test/CMakeLists.txt
+++ b/tests/threepp_vcpkg_test/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(threepp CONFIG REQUIRED)
 
 add_executable(test main.cpp)
-target_link_libraries(test PRIVATE threepp::threepp)
+target_link_libraries(test PRIVATE stb::stb threepp::threepp)
