--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -333,7 +333,7 @@ target_link_libraries(threepp
         stb::stb)
 target_include_directories(threepp
         PUBLIC
-        "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>"
         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
         PRIVATE
         "${generatedSourcesDir}"
