Add vcpkg registry demo (#55)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.18)
 file(STRINGS "${CMAKE_SOURCE_DIR}/version.txt" projectVersion)
 project(threepp VERSION ${projectVersion})
 message("Current ${PROJECT_NAME} version: ${CMAKE_PROJECT_VERSION}\n")
@@ -13,6 +13,9 @@ option(THREEPP_BUILD_TESTS "Build test suite" ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
+include(CMakePackageConfigHelpers)
+include(GNUInstallDirs)
+
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
 
@@ -24,19 +27,19 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
+find_package(assimp CONFIG QUIET)
 find_package(stb CONFIG QUIET)
-find_package(assimp CONFIG)
 
 if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
     add_library(glfw::glfw ALIAS glfw)
 endif()
 
 if (NOT TARGET "stb::stb")
-    find_path(STB_INCLUDE_DIRS "stb_c_lexer.h")
+    find_path(STB_INCLUDE_DIRS "stb_c_lexer.h" REQUIRED)
     add_library(stb::stb INTERFACE IMPORTED)
+    target_include_directories(stb::stb INTERFACE ${STB_INCLUDE_DIRS})
 endif ()
 
-target_include_directories(stb::stb INTERFACE ${STB_INCLUDE_DIRS})
 
 if (THREEPP_BUILD_EXAMPLES)
 
@@ -97,14 +100,10 @@ file(COPY "${CMAKE_SOURCE_DIR}/data/favicon.bmp" DESTINATION ${CMAKE_CURRENT_BIN
 file(COPY "${CMAKE_SOURCE_DIR}/data/models" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/data)
 file(COPY "${CMAKE_SOURCE_DIR}/data/textures" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/data)
 
+
 # ==============================================================================
 # Exports and remaining installation
 # ==============================================================================
-
-
-include(CMakePackageConfigHelpers)
-include(GNUInstallDirs)
-
 
 configure_package_config_file(cmake/config.cmake.in
         ${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake
